applications/echo-service/manifests/005-echo-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo
  namespace: echo
  labels:
    app.kubernetes.io/name: echo
    app.kubernetes.io/component: echo
  annotations:
    cert-manager.io/cluster-issuer: cluster-issuer-muehlbachler-xyz
    external-dns.alpha.kubernetes.io/provider: public
    external-dns.alpha.kubernetes.io/target: 178.63.69.250,2a01:4f8:121:14e2:100:3:3:3
spec:
  rules:
    - host: echo-ingress.demo.cluster.classroom.hochschule-burgenland.muehlbachler.xyz
      http:
        paths:
          - backend:
              service:
                name: echo
                port:
                  name: http
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - echo-ingress.demo.cluster.classroom.hochschule-burgenland.muehlbachler.xyz
      secretName: echo-ingress-tls
